--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vant": "^4.8.5",
+    "vue": "^3.4.19",
+    "web3": "^1.8.1"
   },
   "devDependencies": {
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
     "@vue/compiler-sfc": "^3.0.0",
     "less": "^3.0.4",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "unplugin-vue-components": "^0.26.0"
   },
   "browserslist": [
     "> 1%",
