--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "ethereumjs-tx": "^1.3.7",
     "vant": "^4.8.5",
     "vue": "^3.4.19",
     "web3": "^1.8.1"
