--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bip39": "^3.1.0",
     "core-js": "^3.6.5",
     "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-util": "^7.1.5",
+    "ethereumjs-wallet": "^1.0.2",
     "vant": "^4.8.5",
     "vue": "^3.4.19",
     "web3": "^1.8.1"
