--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ethereumjs-tx": "^1.3.7",
     "ethereumjs-util": "^7.1.5",
     "ethereumjs-wallet": "^1.0.2",
+    "store2": "^2.14.3",
     "vant": "^4.8.5",
     "vue": "^3.4.19",
     "web3": "^1.8.1"
